--- a/package.json
+++ b/package.json
@@ -2,19 +2,19 @@
   "name": "live-comments",
   "version": "1.0.0",
   "main": "index.js",
-  
   "scripts": {
     "start": "ts-node src/index.ts",
     "build": "tsc",
     "dev": "nodemon --exec ts-node src/index.ts"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2"
+    "cassandra-driver": "^4.8.0",
+    "express": "^4.21.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
