--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cassandra-driver": "^4.8.0",
     "express": "^4.21.2",
+    "ioredis": "^5.6.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
