--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cassandra-driver": "^4.8.0",
     "express": "^4.21.2",
     "ioredis": "^5.6.0",
+    "kafkajs": "^2.2.4",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
