--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "live-comments",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "ts-node src/index.ts",
-    "build": "tsc",
-    "dev": "nodemon --exec ts-node src/index.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "cassandra-driver": "^4.8.0",
-    "express": "^4.21.2",
-    "ioredis": "^5.6.0",
-    "kafkajs": "^2.2.4",
-    "uuid": "^11.1.0"
-  },
-  "devDependencies": {
-    "@types/express": "^5.0.1",
-    "@types/node": "^22.13.11",
-    "typescript": "^5.8.2"
-  }
+    "name": "live-comments",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "start": "ts-node src/index.ts",
+        "build": "tsc",
+        "dev": "nodemon --exec ts-node src/index.ts"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "dependencies": {
+        "cassandra-driver": "^4.8.0",
+        "express": "^4.21.2",
+        "ioredis": "^5.6.0",
+        "kafkajs": "^2.2.4",
+        "socket.io": "^4.8.1",
+        "uuid": "^11.1.0"
+    },
+    "devDependencies": {
+        "@types/express": "^5.0.1",
+        "@types/node": "^22.13.11",
+        "typescript": "^5.8.2"
+    }
 }
